<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="?attr/dialogPreferredPadding"
        android:layout_marginRight="?attr/dialogPreferredPadding"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_columns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/columns">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_columns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rows">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_rows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textField_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_preferences_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_target" />

    </LinearLayout>
</ScrollView>
